makes a request to the API

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <main class="main">
       <div class="left-block">
         <div class="search">
-          <input type="text" class="search__input">
-          <button class="search__btn">Go!</button>
+          <input type="text" class="search__input" id="searchInput">
+          <button class="search__btn" id="searchBtn">Go!</button>
         </div>
         <!-- /.search -->
       </div>
