displays the response to the request on the page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
           <button class="search__btn" id="searchBtn">Go!</button>
         </div>
         <!-- /.search -->
+        <div id="searchResultHolder"></div>
+        <!-- /.searchResultHolder -->
       </div>
       <!--- /.left-block --->
       <div class="center-block">
