displays title and language of the book

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <!-- /.searchResultHolder -->
       </div>
       <!--- /.left-block --->
-      <div class="center-block">
-        <p>Information about books</p>
-      </div>
+      <div class="center-block" id="bookInfoHolder"></div>
       <!--- /.center-block --->
       <div class="right-block">
         <div class="list-title">
