--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- /.search -->
         <div id="searchResultHolder"></div>
         <!-- /.searchResultHolder -->
+        <div class="pagination"></div>
       </div>
       <!--- /.left-block --->
       <div class="center-block" id="bookInfoHolder"></div>
