adds pagination points

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- /.search -->
         <div id="searchResultHolder"></div>
         <!-- /.searchResultHolder -->
-        <div class="pagination"></div>
+        <div class="pagination" id="pagination"></div>
       </div>
       <!--- /.left-block --->
       <div class="center-block" id="bookInfoHolder"></div>
