adds readListHolder and listener to center button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <!--- /.center-block --->
       <div class="right-block">
         <div class="list-title">
-          <p>ToRead list...</p>
+          <h2>ToRead list...</h2>
+          <span>0 books, 0 read</span>
+          <div class="read-list-holder" id="readListHolder"></div>
+          <!-- /.read-list-holder-->
         </div>
         <!-- /.list-title -->
       </div>
