adds displayBookListStatus function

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="center-block" id="bookInfoHolder"></div>
       <!--- /.center-block --->
       <div class="right-block">
-        <div class="list-title">
+        <div class="list-title" id="listTitle">
           <h2>ToRead list...</h2>
-          <span>0 books, 0 read</span>
+          <!-- <span>0 books, 0 read</span> -->
         </div>
         <!-- /.list-title -->
         <div class="read-list-holder" id="readListHolder"></div>
