--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <script src="./js/main.js" type="module" defer></script>
+    <title>ToRead List</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
