adds listener to next button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
         <!-- /.search -->
         <div id="searchResultHolder"></div>
         <!-- /.searchResultHolder -->
-        <div class="pagination" id="pagination"></div>
+        <div class="pagination" id="pagination">
+          <div class="pagination-points" id="paginationPoints"></div>     
+          <div class="pagination-btns">
+            <button id="prevBtn">Prev results</button>
+            <button id="nextBtn">Next results</button>
+          </div>
+        </div>
       </div>
       <!--- /.left-block --->
       <div class="center-block" id="bookInfoHolder"></div>
