hides and displays Prev and Next buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- /.searchResultHolder -->
         <div class="pagination" id="pagination">
           <div class="pagination-points" id="paginationPoints"></div>     
-          <div class="pagination-btns">
+          <div class="pagination-btns" id="paginationBtns">
             <button id="prevBtn">Prev results</button>
             <button id="nextBtn">Next results</button>
           </div>
