adds book's subtitle to center block

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="pagination" id="pagination">
           <div class="pagination-points" id="paginationPoints"></div>     
           <div class="pagination-btns" id="paginationBtns">
-            <button id="prevBtn">Prev results</button>
-            <button id="nextBtn">Next results</button>
+            <button id="prevBtn">< Prev</button>
+            <button id="nextBtn">Next ></button>
           </div>
         </div>
       </div>
